logs/strainer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/strainer'...
Compiling './lib/python3.5/site-packages/strainer/case.py'...
***   File "./lib/python3.5/site-packages/strainer/case.py", line 93
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strainer/middleware.py'...
***   File "./lib/python3.5/site-packages/strainer/middleware.py", line 69
    except XHTMLSyntaxError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strainer/operators.py'...
***   File "./lib/python3.5/site-packages/strainer/operators.py", line 45
    except ExpatError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strainer/validate.py'...
***   File "./lib/python3.5/site-packages/strainer/validate.py", line 63
    except lxml.etree.XMLSyntaxError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strainer/wellformed.py'...
***   File "./lib/python3.5/site-packages/strainer/wellformed.py", line 50
    except SAXParseException, e:  # catches our exception and other parse errors
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strainer/xhtmlify.py'...
***   File "./lib/python3.5/site-packages/strainer/xhtmlify.py", line 783
    print xhtml
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strainer-0.1.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
